# Rag-Demo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py
app/api/: schemas.py
app/api/routes/: chat.py  document.py
app/chunkers/: __init__.py  base.py  fixed_size.py  parent_child.py  recursive.py
app/core/: database.py  embedding.py  llm.py  vectorstore.py
app/parsers/: __init__.py  base.py  excel_parser.py  image_parser.py  pdf_parser.py  text_parser.py  word_parser.py
app/services/: document_service.py  rag_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: style.css
frontend/src/views/: ChatView.vue  UploadView.vue
