[project]
name = "rag-demo"
version = "0.1.0"
description = "Enterprise RAG Knowledge Base System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "openai>=1.50.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "rapidocr-onnxruntime>=1.4.0",
    "pillow>=10.4.0",
    "jinja2>=3.1.0",
    "sse-starlette>=2.1.0",
    "pydantic-settings>=2.6.0",
    "sniffio>=1.3.1",
]
